[package]
name = "const_cge"
version = "0.2.1"
edition = "2021"
authors = ["Will Brickner <wgbrickner@gmail.com>"]
description = "Neural network compiler with a focus on no_std targets"
repository = "https://github.com/wbrickner/const_cge"
documentation = "https://docs.rs/const_cge"
readme = "README.md"
license = "MIT"
exclude = ["images/"]
keywords = ["cge", "neural", "machine-learning", "embedded", "no_std"]
categories = [
  "embedded",
  "no-std",
  "science",
  "science::robotics",
  "computer-vision"
]

[dependencies]
# const_cge_macro = "0.2"
const_cge_macro = { path = "./const_cge_macro/" }
libm            = { version = "0.2.2",  optional = true }
micromath       = { version = "2",      optional = true }

[dev-dependencies]
cge      = "0.1"          # used in tests, to verify codegen matches the `cge` evaluation
proptest = "1"            # used in tests, to verify codegen matches the `cge` evaluation
assert_float_eq = "1.1.3" # used in tests, to verify codegen matches the `cge` evaluation

[features]
default   = ["libm"]
std       = []
libm      = ["dep:libm"]                  # enable libm dependency
micromath = ["dep:micromath", "dep:libm"] # enable micromath + libm dependency
