[package]
name = "const_cge_activations"
version = "0.1.0"
edition = "2021"
authors = ["Will Brickner <wgbrickner@gmail.com>"]
description = "Shared activation function implementations for const_cge"
repository = "https://github.com/wbrickner/const_cge"
documentation = "https://docs.rs/const_cge"
readme = "README.md"
license = "MIT"
keywords = ["cge", "neural", "machine-learning", "embedded", "no_std"]
categories = [
  "embedded",
  "no-std",
  "science",
  "science::robotics",
  "computer-vision"
]

[dependencies]
libm      = { version = "0.2.2",  optional = true }
micromath = { version = "2",      optional = true }

[features]
default   = ["libm"]
std       = []

# enable libm dependency
libm      = ["dep:libm"]

# enable micromath + libm dependency (still need libm for tanh function lmfao)
micromath = ["dep:micromath", "dep:libm"]
