[package]
name = "const_cge_macro"
version = "0.1.0"
edition = "2021"
authors = ["Will Brickner <wgbrickner@gmail.com>"]
description = "Macro implementation of const_cge"
repository = "https://github.com/wbrickner/const_cge"
documentation = "https://docs.rs/const_cge"
readme = "README.md"
license = "MIT"
keywords = ["cge", "neural", "machine-learning", "embedded", "no_std"]
categories = [
  "embedded",
  "no-std",
  "science",
  "science::robotics",
  "computer-vision"
]

[lib]
proc-macro = true

[dependencies]
cge = "0.0.1"                               
proc-macro2 = "1"                           
quote = "1"                                 
syn = { version = "1", features = ["full"] }
